--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,11 +13,11 @@
 		{% block stylesheets %}
 			<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 			<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-			<link rel="stylesheet" href={{asset('/css/app.css')}} >
+			<link rel="stylesheet" href={{asset('/css/app.css')}}>
 		{% endblock %}
 
 		{% block javascripts %}
-			{# {% block importmap %}
+		{# {% block importmap %}
 				{{ importmap('app') }}
 			{% endblock %} #}
 			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
@@ -26,31 +26,31 @@
 	<body>
 		<header class="d-flex justify-content-between align-items-center p-3 bg-dark">
 			<a href={{ path('paris')}}>
-                <img src={{ asset('/images/icon.svg') }} alt="logo BnB" width="60">
-            </a>
+				<img src={{ asset('/images/icon.svg') }} alt="logo BnB" width="60">
+			</a>
 			<div class="d-flex gap-3 align-items-center">
-            {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-			   {%if is_garanted('ROLE_ADMIN')%}
-			       <a href="{{ path('admin') }}" class="text-white text-decoration-none">Dashaboard</a>
-				   <span class="text-white">|</span>
-				   {%endif%}
-                <a href={{ path('account') }} class="text-white text-decoration-none">My account</a>
-                <a href={{ path('app_logout') }} class="text-white text-decoration-none">Logout</a>
-                {% else %}
-				<a href={{ path('app_register') }} class="text-white text-decoration-none">Sign up</a>
-				<a href={{ path('app_login') }} class="btn btn-light rounded-pill">Login</a>
-            {% endif %}
+				{% if is_granted('IS_AUTHENTICATED_FULLY') %}
+					{% if is_granted('ROLE_ADMIN') %}
+						<a href="{{ path('admin') }}" class="text-white text-decoration-none">Dashboard</a>
+						<span class="text-white">|</span>
+					{% endif %}
+					<a href={{ path('account') }} class="text-white text-decoration-none">My account</a>
+					<a href={{ path('app_logout') }} class="text-white text-decoration-none">Logout</a>
+				{% else %}
+					<a href={{ path('app_register') }} class="text-white text-decoration-none">Sign up</a>
+					<a href={{ path('app_login') }} class="btn btn-light rounded-pill">Login</a>
+				{% endif %}
 			</div>
 		</header>
 		<main>
 			{% block body %}{% endblock %}
 		</main>
 		<footer class="d-flex gap-3 w-100 justify-content-center">
-            <a href={{ path('paris') }} class="text-white text-decoration-none">Paris</a>
-            <a href={{ path('lasvegas') }} class="text-white text-decoration-none">Las Vegas</a>
-            <a href={{ path('kyoto') }} class="text-white text-decoration-none">Kyoto</a>
-            <a href={{ path('sydney') }} class="text-white text-decoration-none">Sydney</a>
-            <a href={{ path('hongkong') }} class="text-white text-decoration-none">Hong Kong</a>
-        </footer>
+			<a href={{ path('paris') }} class="text-white text-decoration-none">Paris</a>
+			<a href={{ path('lasvegas') }} class="text-white text-decoration-none">Las Vegas</a>
+			<a href={{ path('kyoto') }} class="text-white text-decoration-none">Kyoto</a>
+			<a href={{ path('sydney') }} class="text-white text-decoration-none">Sydney</a>
+			<a href={{ path('hongkong') }} class="text-white text-decoration-none">Hong Kong</a>
+		</footer>
 	</body>
-</html>
+</html></body></html>
